Replace apktool with ARSCLib - pure Java APK patching
- Uses ARSCLib 1.3.5 for APK manipulation (no apktool/aapt needed)
- Works on Android without Java runtime
- Simplified Patcher.java using ApkModule API
- Bsdiff + native patches work without decompilation